Tue May 16 12:06:23 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Created an OmDatabase object.  This represents a database,
	  and is a base class for OmWritableDatabase, which is a database
	  which can be written to.  Implemented, except for assignment
	  operators which may operate incorrectly.

Mon May 15 13:34:39 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Moved OmDatabaseGroup into a separate header file.

Mon May 15 12:23:16 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Bugfix: MultiDatabases term existence cache no longer grows
	  arbitrarily.  (But not an efficient implementation)

	* SingleMatch now inherits from OmRefCntBase, so we can use
	  reference counted pointers to it.
	
	* More work tidying up structure of MultiDatabase and MultiMatch.

Mon May 15 11:34:16 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Now use SO_REUSEADDR in TCP server

	* Added the first tcp test to nettest.

Fri May 12 19:18:43 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Bug fixes to the TCP server

Fri May 12 18:48:14 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Make OmDatabaseGroup now stores opened databases, rather than
	  their parameters.

	* OmDatabaseGroup::InternalInterface now uses a method in
	  OmDatabaseGroup::Internal to get_multidatabase.  Same MultiDatabase
	  is returned after each call, unless a database has been added.
	  Pthread locking is also sorted out.

Fri May 12 18:29:01 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* New class OmDatabaseGroup::InternalInterface, used to extend
	  the OmDatabaseGroup interface for internal use.
	
	* ProgServer's implementation mostly moved into new SocketServer.

	* New class TcpServer deriving from SocketServer

Fri May 12 16:10:44 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove set_root() method and "root" member from IRDatabase, and