@@ -57,9 +57,6 @@ class NetworkMatch : public SingleMatch
 
 	/// Indication of whether max_weight needs to be updated
 	bool max_weight_needs_fetch;
-
-	/// The current match options
-	OmMatchOptions moptions;
     public:
         NetworkMatch(IRDatabase * database_);
         ~NetworkMatch();
